Fixed layout bugs

--- a/src/pages/Blog/BlogPost.css
+++ b/src/pages/Blog/BlogPost.css
@@ -31,6 +31,10 @@
     margin: 1rem 0;
 }
 
+.blog-post img {
+    width: 100%;
+}
+
 .blog-info {
     margin: 1rem;
     border-left: 0.5vw solid var(--dark-bg);
