--- a/src/pages/Blog/NewBlogPost.css
+++ b/src/pages/Blog/NewBlogPost.css
@@ -1,5 +1,12 @@
 .content-container {
     display: flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 800px) {
+    .content-container {
+        flex-direction: row;
+    }
 }
 
 .content-container div {
