--- a/src/pages/Projects/ProjectsPage.css
+++ b/src/pages/Projects/ProjectsPage.css
@@ -16,6 +16,7 @@
 
 .project img {
     width: 100%;
+    border-radius: 1rem 1rem 0 0;
 }
 
 
